style.css
:root {
    --background: #F4F4F4;
    --primary: #2337FF;
    //--border: 2px solid #989898;
    --shadow: 1px 1px 8px 3px #888888;
}

html {
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    color: #000;
    line-height: 1.7;
}

body {
    background: #f9f9f9;
    margin: 20px;
}

a {
    text-decoration: none;
    color: #000;
    text-align: right;
    font-size: 13.3333px;
}

.warning {
    display: none;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    margin: -20px;
    z-index: 5;
}

.warning p {
    text-align: center;
    padding: 2rem;
    background-color: var(--background);
}

.wrapper {
    display: grid;
    grid-gap: 20px;
    max-width: 2100px;
    margin: 0 auto;
}

.item {
    background: var(--background);
    border: var(--border);
    box-shadow: var(--shadow);
    text-align: center;
}

.item h2 {
    font-size: 1.25rem;
    margin: 8px;
}

input[type=submit], button, a {
    -webkit-appearance: none;
    background: var(--primary);
    opacity: 0.8;
    padding: 0.5rem;
    border: none;
    cursor: pointer;
}

input[type=submit] {
    display: block;
    margin: 0.5rem auto;
}

input[type=submit]:hover, button:hover, a:hover {
    opacity: 1;
}

#pause_play_button {
    -webkit-appearance: none;
    width: 60px;
}

.top_container {
    display: grid;
    grid-gap: 20px;
    grid-template-areas: 'title slider information form' 'canvas slider information form' 'canvas pause_play information form';
    grid-template-columns: 482px 6fr 5fr 4fr;
}

.information_container {
    grid-area: information;
}

.title_container {
    grid-area: title;
    padding: 7px;
}

.title_container h1 {
    font-size: 1.3rem;
    display: inline;
}

.hint_icon {
    background-color: #4D4D4D;
    width: 20px;
    height: 20px;
    text-align: center;
    line-height: 21px;
    border-radius: 20px;
    color: white;
}

.hint {
    position: absolute;
    display: none;
    width: 200px;
    opacity: 0.93;
    background-color: var(--primary);
    z-index: 1;
}

.hint_icon:hover ~ .hint, .hint:hover {
    display: block;
}

.form_container {
    grid-area: form;
}

.slide_container table td:nth-child(even), .information_container table td:nth-child(even) {
    text-align: right;
}

.slide_container table td:nth-child(4) {
    text-align: center;
}

table {
    text-align: center;
    margin: 0 auto;
}

.slide_container {
    grid-area: slider;
}

.pause_play {
    grid-area: pause_play;
    padding: 7px;
}

#simulation {
    grid-area: canvas;
    text-align: right;
    height: 272px;
    width: 480px;
    margin: 0 auto;
}

.bottom_container {
    display: grid;
    grid-gap: 20px;
    grid-template-columns: repeat(2, 1fr);
}

.bottom_container canvas {
    width: 100%;
    height: 100%;
}

.slider {
    -webkit-appearance: none;
    width: 100%;
    max-width: 100px;
    height: 15px;
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.slider:hover {
    opacity: 1;
}

.slider::-webkit-slider-thumb { /* Place in same as moz-range-thumb???? */
    -webkit-appearance: none;
    width: 25px;
    height: 25px;
    background: var(--primary);
    cursor: pointer;
}

.slider::-moz-range-thumb {
    -webkit-appearance: none;
    width: 25px;
    height: 25px;
    background: var(--primary);
    cursor: pointer;
}

@media (max-width: 1350px) {
    .top_container {
        grid-template-areas: 'title slider' 'canvas slider' 'canvas pause_play' 'information form';
        grid-template-columns: 482px 1fr;
    }
}

@media (max-width: 1000px) {
    .bottom_container {
        grid-template-columns: 0.93fr;
    }
}


@media (max-width: 800px) {
    .top_container, .bottom_container {
        grid-template-areas: '';
        grid-template-columns: 0px;
        display: block;
    }

    .item {
        margin-bottom: 20px;
    }

    .pause_play {
        margin: 20px 0px;
    }

    .overall_chart_container {
        margin-top: -20px;
    }
}

@media (max-width: 520px) {
    .warning {
        display: inline;
    }
}

